--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,10 @@ code {
 .nav-link {
   margin-left: 40px;
 }
+
+.people {
+  display: flex;
+  justify-content: space-between;
+  padding: 40px 0 100px 0;
+  box-sizing: border-box;
+}
